--- a/css/main.css
+++ b/css/main.css
@@ -750,7 +750,7 @@ footer .news-letter p {
 }
 .projects-head {
   text-align: center;
-  margin-bottom: 105px;
+  margin-bottom: 90px;
 }
 
 .projects-head h2 {
@@ -879,7 +879,7 @@ footer .news-letter p {
 
 .contact form input {
   border: 1px solid rgba(239, 236, 236, 1) !important;
-  padding: 20px !important;
+  padding: 22px !important;
   width: 100%;
   height: 18px;
   font-size: 18px;
@@ -983,6 +983,8 @@ footer .news-letter p {
 
 .single_news-title span {
   font-size: 24px;
+  font-size: 20px;
+  color: var(--gray3) !important;
 }
 
 .single_news-body {
@@ -1010,6 +1012,7 @@ footer .news-letter p {
 }
 
 .single_news .social-links li a {
+  padding: 5px 8px !important;
   background-color: var(--blue) !important;
 }
 
@@ -1022,6 +1025,7 @@ footer .news-letter p {
   font-size: 24px;
   text-align: center;
   margin-bottom: 13px;
+  padding-right: 20px;
 }
 
 .related-post_title {
@@ -1105,7 +1109,7 @@ footer .news-letter p {
 
 .ouvrage-prod_details p {
   margin-top: 20px;
-  font-size: 24px;
+  font-size: 22px;
   color: var(--tb-details-color) !important;
 }
 
